<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:hint="@string/hint"
            android:gravity="center"
            android:background="@drawable/edittext_bg"
            android:inputType="number"
            android:maxLength="3"
            />

      <!--  <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/find"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/search"
             />-->

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:id="@+id/defineCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defineCode"/>

        <Button
            android:id="@+id/comfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirmButton"
            />
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/key_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>